--- a/ImageFeed/Base.lproj/Main.storyboard
+++ b/ImageFeed/Base.lproj/Main.storyboard
@@ -284,20 +284,28 @@
                                     <action selector="didTapeBackButton:" destination="2xg-Cx-DNP" eventType="touchUpInside" id="LHJ-Db-MqC"/>
                                 </connections>
                             </button>
+                            <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="cks-nB-8MK">
+                                <rect key="frame" x="0.0" y="84" width="390" height="4"/>
+                                <color key="progressTintColor" name="YPBlack"/>
+                            </progressView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="OyU-EV-Sny"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="4wW-cU-KZv" secondAttribute="trailing" id="6mQ-G8-Abg"/>
                             <constraint firstItem="4wW-cU-KZv" firstAttribute="top" secondItem="Bng-vf-4Er" secondAttribute="top" id="6tq-yO-EFg"/>
+                            <constraint firstItem="cks-nB-8MK" firstAttribute="top" secondItem="g5K-6r-0fZ" secondAttribute="bottom" id="7GB-1C-zls"/>
+                            <constraint firstAttribute="trailing" secondItem="cks-nB-8MK" secondAttribute="trailing" id="86n-C1-8Q7"/>
                             <constraint firstAttribute="bottom" secondItem="4wW-cU-KZv" secondAttribute="bottom" id="Rl7-Vs-GRu"/>
                             <constraint firstItem="g5K-6r-0fZ" firstAttribute="top" secondItem="OyU-EV-Sny" secondAttribute="top" constant="15" id="SLa-S3-OXX"/>
+                            <constraint firstItem="cks-nB-8MK" firstAttribute="leading" secondItem="Bng-vf-4Er" secondAttribute="leading" id="dyq-56-DtF"/>
                             <constraint firstItem="4wW-cU-KZv" firstAttribute="leading" secondItem="Bng-vf-4Er" secondAttribute="leading" id="w94-0l-ARi"/>
                             <constraint firstItem="g5K-6r-0fZ" firstAttribute="leading" secondItem="OyU-EV-Sny" secondAttribute="leading" constant="16" id="xVR-3f-TPo"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="hET-o8-ir5"/>
                     <connections>
+                        <outlet property="progressView" destination="cks-nB-8MK" id="dqC-Vh-XoM"/>
                         <outlet property="webView" destination="4wW-cU-KZv" id="mwB-7w-zyW"/>
                     </connections>
                 </viewController>
